fix z-index issue with the main dropdown clash with the breadcrumb and added border to the breadcrumb.

--- a/themes/doks/assets/scss/common/_global.scss
+++ b/themes/doks/assets/scss/common/_global.scss
@@ -428,7 +428,8 @@ main > nav[aria-label="breadcrumb"] {
     background-color: var(--bs-body-bg);
     width: 100%;
     padding: 2px;
-    z-index: 1000;
+    z-index: 900;
+    border-bottom: solid 1px $gray-200;
    }
 }
 
